--- a/libraries/ref/sun31.tex
+++ b/libraries/ref/sun31.tex
@@ -1,30 +1,26 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {31.5}
-\newcommand{\stardocauthors}   {R.F.~Warren-Smith \& \\
+\stardocnumber      {31.5}
+\stardocauthors   {R.F.~Warren-Smith \& \\
                                 A.J.~Chipperfield}
-\newcommand{\stardocdate}      {27 April 1998}
-\newcommand{\stardoctitle}     {REF \\ [\latex{1ex}]
+\stardocdate        {27 April 1998}
+\stardoctitle       {REF \\ [\latex{1ex}]
                                 Routines for Handling References
                                 to HDS Objects}
-\newcommand{\stardocversion}   {Version 1.1}
-\newcommand{\stardocmanual}    {Programmer's Manual}
-\newcommand{\stardocabstract}  {%
+\stardocversion     {Version 1.1}
+\stardocmanual      {Programmer's Manual}
+\stardocabstract  {%
 It is sometimes useful to use the Hierarchical Data System HDS
 (\xref{SUN/92}{sun92}{}) to store \emph{references } or \emph{pointers}
 to other HDS objects. For instance, this allows the same data object to
@@ -35,531 +31,16 @@ which have been referenced in this way.  }
 
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
-
-
-
+% ? Document specific \providecommand or \newenvironment commands.
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-\null\vspace {5mm}
-\begin {center}
-\rule{80mm}{0.5mm} \\ [1ex]
-{\Large\bf \stardoctitle \\ [2.5ex]
-           \stardocversion} \\ [2ex]
-\rule{80mm}{0.5mm}
-\end{center}
-
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
-
-\begin{latexonly}
-\null\vspace {5mm}
-\begin {center}
-\rule{80mm}{0.5mm} \\ [1ex]
-{\Large\bf \stardoctitle \\ [2.5ex]
-           \stardocversion} \\ [2ex]
-\rule{80mm}{0.5mm}
-\end{center}
-\vspace{30mm}
-\end{latexonly}
 
 \section{\xlabel{introduction}Introduction}
 \label{introduction}
@@ -618,8 +99,8 @@ avoid duplicating the common dataset, the others may contain a
 reference to it.
 
 For example:
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
    Name                type                  Comments
 
 DATA                DATA_SETS
@@ -634,8 +115,8 @@ DATA                DATA_SETS
      .DATA_ARRAY    _REAL(1024)
    -
   etc.
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 Then a piece of code which handles structures of type SPECTRUM, which
 would normally contain the axis data in .AXIS1 (as SET1 does), could be
@@ -643,8 +124,8 @@ modified as follows to handle an object .AXIS1 containing either the
 actual axis data or a reference to the object which does contain the
 actual axis data.
 
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 *    LOC1 is a locator associated with a SPECTRUM object
 *    Obtain locator to AXIS data
       CALL DAT_FIND(LOC1, 'AXIS1', LOC2, STATUS)
@@ -659,8 +140,8 @@ actual axis data.
       ENDIF
 *    End of modification
 *    LOC2 now locates the axis data wherever it is.
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 This code has been packaged into the subroutine \textbf{REF\_FIND} which
 can be used instead of DAT\_FIND in cases where the component requested
@@ -699,7 +180,7 @@ object.
 
 \end{description}
 
-Locators obtained {\em via} a reference are flagged as such by being
+Locators obtained \emph{via} a reference are flagged as such by being
 linked to the  group \$\$REFERENCED\$ using the subroutine HDS\_LINK.
 This fact is used by REF\_ANNUL in determining whether or not
 HDS\_CLOSE should be called for the container file of the object
@@ -729,11 +210,9 @@ Before compiling applications which use the REF library on UNIX
 systems, you should normally ``log in'' for REF software development
 with the following shell command:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ref_dev
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 This will create links in your current working directory which refer to
 the REF include files. You may then refer to these files using their
@@ -741,21 +220,17 @@ standard (upper case) names without having to know where they actually
 reside. These links will persist, but may be removed at any time,
 either explicitly or with the command:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ref_dev remove
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 If you do not ``log in'' in this way, then references to REF include files
 should be in lower case and must contain an absolute pathname identifying the
 Starlink include file directory, thus:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 INCLUDE '/star/include/ref_par'
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 The former method is recommended.
 
@@ -765,11 +240,9 @@ Applications which use the ADAM programming environment
 instance, an ADAM A-task which calls REF routines might be linked as
 follows:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % alink adamprog.f `ref_link_adam`
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 (note the use of backward quote characters, which are required).
 
@@ -778,11 +251,9 @@ may be linked by specifying \texttt{`ref\_link`} on the compiler
 command line. Thus, to compile and link a stand-alone application
 called \texttt{`prog'}, the following might be used:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 prog.f `ref_link` -o prog
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 %  End of main part.
 
@@ -834,7 +305,7 @@ called \texttt{`prog'}, the following might be used:
       specified structure and writes a reference to an HDS object in
       it.  If the specified component already exists and is a reference
       object, it will be used. If it is not a reference object, an
-      error is reported.  The reference may be described as {\tt "}internal{\tt "}
+      error is reported.  The reference may be described as \texttt{"}internal\texttt{"}
       which means that the referenced object is in the same container
       file as the reference object.
    }
@@ -861,8 +332,8 @@ called \texttt{`prog'}, the following might be used:
       \sstsubsection{
          INTERN = LOGICAL (Given)
       }{
-         Whether or not the referenced object is {\tt "}internal{\tt "}.  Set this
-         to .TRUE. if the reference is {\tt "}internal{\tt "} and to .FALSE. if it
+         Whether or not the referenced object is \texttt{"}internal\texttt{"}.  Set this
+         to .TRUE. if the reference is \texttt{"}internal\texttt{"} and to .FALSE. if it
          is not.
       }
       \sstsubsection{
@@ -902,8 +373,8 @@ called \texttt{`prog'}, the following might be used:
       \sstsubsection{
          MODE = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         Mode of access required to the object. ({\tt '}READ{\tt '}, {\tt '}WRITE{\tt '} or
-         {\tt '}UPDATE{\tt '}). This is specified so that the container file of any
+         Mode of access required to the object. (\texttt{'}READ\texttt{'}, \texttt{'}WRITE\texttt{'} or
+         \texttt{'}UPDATE\texttt{'}). This is specified so that the container file of any
          referenced object can be opened in the correct mode.
       }
       \sstsubsection{
@@ -942,8 +413,8 @@ called \texttt{`prog'}, the following might be used:
       \sstsubsection{
          MODE = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         Mode of access required to the object. ({\tt '}READ{\tt '}, {\tt '}WRITE{\tt '} or
-         {\tt '}UPDATE{\tt '}). This is specified so that the container file of any
+         Mode of access required to the object. (\texttt{'}READ\texttt{'}, \texttt{'}WRITE\texttt{'} or
+         \texttt{'}UPDATE\texttt{'}). This is specified so that the container file of any
          referenced object can be opened in the correct mode.
       }
       \sstsubsection{
@@ -1001,7 +472,7 @@ called \texttt{`prog'}, the following might be used:
       This routine writes a reference to an HDS object into an existing
       reference structure.  An error is reported if an attempt is made
       to write a reference into an object which is not a reference
-      object.  The reference may be described as {\tt "}internal{\tt "} which means
+      object.  The reference may be described as \texttt{"}internal\texttt{"} which means
       that the referenced object is in the same container file as the
       reference object.
    }
@@ -1022,8 +493,8 @@ called \texttt{`prog'}, the following might be used:
       \sstsubsection{
          INTERN = LOGICAL (Given)
       }{
-         Whether or not the referenced object is {\tt "}internal{\tt "}.  Set this
-         to .TRUE. if the reference is {\tt "}internal{\tt "} and to .FALSE. if it
+         Whether or not the referenced object is \texttt{"}internal\texttt{"}.  Set this
+         to .TRUE. if the reference is \texttt{"}internal\texttt{"} and to .FALSE. if it
          is not.
       }
       \sstsubsection{
